--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "php": ">=7",
-        "illuminate/support": "5.5.x|5.6.x|5.7.x"
+        "illuminate/support": "5.6.x|5.7.x"
     },
     "autoload": {
         "psr-4": {
